Changed blockquote to code

--- a/index.html
+++ b/index.html
@@ -1,59 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title></title>
     <meta charset="utf-8" />
 </head>
 <body>
-
-    <header>
-        <h1>Coding Temple</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="courses.html">Courses</a>
-            <a href="students.html">Students</a>
-            <a href="apply.html">Apply Now</a>
-        </nav>
-    </header>
-
-    <section>
-        <article>
-            <h2>Classes</h2>
-            <p>
-                Coding Temple offers classes at our two campuses located in Schaumburg, and Chicago.  Currently we offer full and part-time classes.  Our next classes start January 4th, 2016.
-                <a href="apply.html">Start your application...</a>
-            </p>
-        </article>
-    </section>
-
-    <section>
-        <article>
-            <h2>Course Curriculum</h2>
-            <p>
-                Technologies covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and more! We will also teach you how to learn as our end goal is to make you adaptable to other similar technologies and future technologies.
-                <a href="courses.html">View the curriculum...</a>
-            </p>
-        </article>
-    </section>
-
-    <section>
-        <article>
-            <h2>Current Students</h2>
-            <p>
-                Our current cohort consists of students from various backgrounds and knowledge about the IT industry.
-                <a href="students.html">View more on our students...</a>
-            </p>
-        </article>
-    </section>
-
-    <footer>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="courses.html">Courses</a>
-            <a href="students.html">Students</a>
-            <a href="apply.html">Apply Now</a>
-        </nav>
-    </footer>
-
 </body>
 </html>
