--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+
+    <style>
+        .container{
+            width: 960px;
+            padding-left: 30px;
+            padding-right: 30px;
+            margin: 0 auto;
+        }
+    </style>
+
 </head>
 <body>
-    <header>
+
+    <header class="container">
         <h1>Coding Temple</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -15,7 +26,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="container">
         <article>
             <h2>Classes</h2>
             <p>
@@ -25,7 +36,7 @@
         </article>
     </section>
 
-    <section>
+    <section class="container">
         <article>
             <h2>Course Curriculum</h2>
             <p>
@@ -35,7 +46,7 @@
         </article>
     </section>
 
-    <section>
+    <section class="container">
         <article>
             <h2>Current Students</h2>
             <p>
@@ -45,7 +56,7 @@
         </article>
     </section>
 
-    <footer>
+    <footer class="container">
         <nav>
             <a href="index.html">Home</a>
             <a href="courses.html">Courses</a>
@@ -53,6 +64,5 @@
             <a href="apply.html">Apply Now</a>
         </nav>
     </footer>
-
 </body>
 </html>
