--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
             padding-right: 30px;
             margin: 0 auto;
         }
+        body{
+            color: black;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 22px;
+            font-family:  "Open Sans",Arial, Helvetica, sans-serif;
+        }
+        h1, h2, h3, h4{
+            color: #45a2da;
+        }
+        h2, h3, h4{
+            font-size: 22px;
+            font-weight: 400;
+            text-transform: uppercase;
+        }
+        a{
+            text-decoration: none;
+        }
+        header nav {
+            text-align: right;
+        }
+        header nav a {
+            color: black;
+        }
+        header nav a:hover{
+            color: #45a2da;
+        }
+        footer a {
+            color: white;
+        }
     </style>
 
 </head>
