--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 0 auto;
         }
         body{
+            background-color: white;
             color: black;
             font-weight: 300;
             font-size: 16px;
@@ -41,6 +42,21 @@
         footer a {
             color: white;
         }
+        article p{
+            color: #848484;
+        }
+        .alt-link{
+            background-color: black;
+            color: white;
+        }
+        footer{
+            background-color: black;
+            border-top: 1px solid rgba(0,0,0,0.085);
+            box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.8);
+        }
+        footer aside h3{
+            color: #848484;
+        }
     </style>
 
 </head>
@@ -52,7 +68,7 @@
             <a href="index.html">Home</a>
             <a href="courses.html">Courses</a>
             <a href="students.html">Students</a>
-            <a href="apply.html">Apply Now</a>
+            <a class="alt-link" href="apply.html">Apply Now</a>
         </nav>
     </header>
 
@@ -93,6 +109,8 @@
             <a href="students.html">Students</a>
             <a href="apply.html">Apply Now</a>
         </nav>
+        <aside>
+        </aside>
     </footer>
 </body>
 </html>
