--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             <a href="apply.html">Apply Now</a>
         </nav>
         <aside>
+            <h3>222 W Ontario</h3>
+            <h3>Suite 450</h3>
+            <h3>Chicago, IL 60654</h3>
         </aside>
     </footer>
 </body>
