add style sheet. add classes to some elements

--- a/index.html
+++ b/index.html
@@ -6,45 +6,47 @@
     <meta charset="utf-8" />
 </head>
 <body>
-  <h1>Coding Temple</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="courses.html">Courses</a>
-    <a href="students.html">Students</a>
-    <a href="apply.html">Apply Now</a>
-    <section>
-      <h1>Classes</h1>
+  <header class="container">
+    <h1>Coding Temple</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="courses.html">Courses</a>
+      <a href="students.html">Students</a>
+      <a href="apply.html">Apply Now</a>
+    </nav>
+  </header>
+  <section>
+    <h1>Classes</h1>
 
-      <article>
-        Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
-        we offer full and part-time classes. Our next classes start January 4, 2016.
-      </article>
-      <a href="apply.html">Start your application...</a>
-      
+    <article>
+      Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
+      we offer full and part-time classes. Our next classes start January 4, 2016.
+    </article>
+    <a href="apply.html">Start your application...</a>
+    
 
-    </section>
-    <section>
-      <h1>Curriculum</h1>
+  </section>
+  <section>
+    <h1>Curriculum</h1>
 
-      <article>
-        Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
-        more! We will also teach you how to learn as our end goal is to make you adaptable to other
-        similar technologies and future technologies.
-      </article>
-      <a href="courses.html">View the Curriculum...</a>
+    <article>
+      Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
+      more! We will also teach you how to learn as our end goal is to make you adaptable to other
+      similar technologies and future technologies.
+    </article>
+    <a href="courses.html">View the Curriculum...</a>
 
-    </section>
-    <section>
-      <h1>Current Students</h1>
+  </section>
+  <section>
+    <h1>Current Students</h1>
 
-      <article>
-        Our current cohort consists of students from various backgrounds and knowledge about the IT
-        industry. 
-      </article>
-      <a href="students.html">View more on our students...</a>
-    </section>
-  </nav>
-  <footer>
+    <article>
+      Our current cohort consists of students from various backgrounds and knowledge about the IT
+      industry. 
+    </article>
+    <a href="students.html">View more on our students...</a>
+  </section>
+  <footer class="container">
     <a href="index.html">Home</a>
     <a href="courses.html">Courses</a>
     <a href="students.html">Students</a>
