--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Coding Temple</title>
     <meta charset="utf-8" />
+    <link href="./resources/css/style.css" type=text/css rel="stylesheet"/>
 </head>
 <body>
   <header class="container">
@@ -15,8 +16,8 @@
       <a href="apply.html">Apply Now</a>
     </nav>
   </header>
-  <section>
-    <h1>Classes</h1>
+  <section class="container">
+    <h2>Classes</h2>
 
     <article>
       Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
@@ -26,8 +27,8 @@
     
 
   </section>
-  <section>
-    <h1>Curriculum</h1>
+  <section class="container">
+    <h2>Curriculum</h2>
 
     <article>
       Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
@@ -37,8 +38,8 @@
     <a href="courses.html">View the Curriculum...</a>
 
   </section>
-  <section>
-    <h1>Current Students</h1>
+  <section class="container">
+    <h2>Current Students</h2>
 
     <article>
       Our current cohort consists of students from various backgrounds and knowledge about the IT
