--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <h2>Classes</h2>
 
     <article>
-      Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
-      we offer full and part-time classes. Our next classes start January 4, 2016.
+      <p>
+        Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
+        we offer full and part-time classes. Our next classes start January 4, 2016.
+      </p>
     </article>
     <a href="apply.html">Start your application...</a>
     
@@ -31,9 +33,11 @@
     <h2>Curriculum</h2>
 
     <article>
-      Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
-      more! We will also teach you how to learn as our end goal is to make you adaptable to other
-      similar technologies and future technologies.
+      <p>
+        Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
+        more! We will also teach you how to learn as our end goal is to make you adaptable to other
+        similar technologies and future technologies.
+      </p>
     </article>
     <a href="courses.html">View the Curriculum...</a>
 
@@ -42,12 +46,19 @@
     <h2>Current Students</h2>
 
     <article>
-      Our current cohort consists of students from various backgrounds and knowledge about the IT
-      industry. 
+      <p>
+        Our current cohort consists of students from various backgrounds and knowledge about the IT
+        industry. 
+      </p>
     </article>
     <a href="students.html">View more on our students...</a>
   </section>
   <footer class="container">
+    <aside>
+      <h3>332 S Michigan</h3>
+      <h3>9th Floor</h3>
+      <h3>Chicago, IL 60604</h3>
+    </aside>
     <a href="index.html">Home</a>
     <a href="courses.html">Courses</a>
     <a href="students.html">Students</a>
