--- a/index.html
+++ b/index.html
@@ -7,62 +7,93 @@
     <link href="./resources/css/style.css" type=text/css rel="stylesheet"/>
 </head>
 <body>
-  <header class="container">
-    <h1>Coding Temple</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="courses.html">Courses</a>
-      <a href="students.html">Students</a>
-      <a href="apply.html">Apply Now</a>
+  <header class="container clearfix">
+    <div class="col-1-3">
+      <img src="./images/logo.png" />
+    </div>
+    <nav class="col-2-3">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="students.html">Students</a></li>
+        <li class="alt-list"><a href="apply.html">Apply Now</a></li>
+      </ul>
     </nav>
   </header>
-  <section class="container">
-    <h2>Classes</h2>
 
-    <article>
-      <p>
-        Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
-        we offer full and part-time classes. Our next classes start January 4, 2016.
-      </p>
-    </article>
+  <section class="container clearfix">
+    <div class="col-1-2">
+      <img src="./images/classes.png">
+    </div>
+
+    <div class="col-1-2">
+      <h2>Classes</h2>
+      <article>
+        <p>
+          Coding Temple offers classes at our two campuses located in Schaumburg and Chicago. Currently
+          we offer full and part-time classes. Our next classes start January 4, 2016.
+        </p>
+      </article>
+    </div>
     <a href="apply.html">Start your application...</a>
-    
-
   </section>
-  <section class="container">
-    <h2>Curriculum</h2>
 
-    <article>
-      <p>
-        Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
-        more! We will also teach you how to learn as our end goal is to make you adaptable to other
-        similar technologies and future technologies.
-      </p>
-    </article>
+  <section class="container clearfix">
+    <div class="col-1-2">
+      <h2>Curriculum</h2>
+      <article>
+        <p>
+          Technologies Covered: JavaScript, C#, ASP.NET MVC, Entity Framework, HTML/CSS, SQL, Git, and
+          more! We will also teach you how to learn as our end goal is to make you adaptable to other
+          similar technologies and future technologies.
+        </p>
+      </article>
+    </div>
+
+    <div class="col-1-2">
+      <img src="./images/curriculum.png">
+    </div>
     <a href="courses.html">View the Curriculum...</a>
-
   </section>
-  <section class="container">
-    <h2>Current Students</h2>
 
-    <article>
-      <p>
-        Our current cohort consists of students from various backgrounds and knowledge about the IT
-        industry. 
-      </p>
-    </article>
+  <section class="container clearfix">
+    <div class="col-1-2">
+      <img src="./images/students.png">
+    </div>
+    <div class="col-1-2">
+      <h2>Current Students</h2>
+      <article>
+        <p>
+          Our current cohort consists of students from various backgrounds and knowledge about the IT
+          industry. 
+        </p>
+      </article>
+    </div>
     <a href="students.html">View more on our students...</a>
   </section>
-  <footer class="container">
-    <aside>
-      <h3>332 S Michigan</h3>
-      <h3>9th Floor</h3>
-      <h3>Chicago, IL 60604</h3>
-    </aside>
-    <a href="index.html">Home</a>
-    <a href="courses.html">Courses</a>
-    <a href="students.html">Students</a>
-    <a href="apply.html">Apply Now</a>
+  <footer class="container clearfix">
+    <div class="col-1-3">
+      <img src="./images/logo_small.png" />
+      <p>The skills and experience that students achieve at Coding Temple takes them a long way. We offer small
+        classes, so students are able to have a more one on one interaction with our teachers. Our curriculum is
+        designed to make students feel confident and be successful in the workforce once they have completed
+        our course.</p>
+    </div>
+
+    <div class="col-1-3">
+      <h3>Quick Links</h3>
+      <span><a href="index.html">&bull; Home</a></span>
+      <span><a href="courses.html">&bull; Courses</a></span>
+      <span><a href="students.html">&bull; Students</a></span>
+      <span><a href="apply.html">&bull; Apply Now</a></span>
+    </div>
+    <div class="col-1-3">
+      <aside>
+        <h3>332 S Michigan</h3>
+        <h3>9th Floor</h3>
+        <h3>Chicago, IL 60604</h3>
+      </aside>
+    </div>
   </footer>
 </body>
 
